[package]
name = "rfsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rfsync"
path = "src/lib.rs"

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
bincode = "1.3.3"
clap = { version = "4.3.10", features = ["derive"] }
futures-util = "0.3.28"
inotify = "0.10.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_bytes = "0.11.9"
tokio = { version = "1.29.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.4.0"
