[package]
name = "rfsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rfsync"
path = "src/lib.rs"

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.68"
bincode = "1.3.3"
clap = { version = "4.3.10", features = ["derive"] }
env_logger = "0.10.0"
fuser = "0.12.0"
futures-util = "0.3.28"
home = "0.5.5"
inotify = "0.10.1"
libc = "0.2.147"
log = "0.4.19"
lru = "0.11.0"
rustix = { version = "0.38.3", features = ["fs"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_bytes = "0.11.9"
tokio = { version = "1.29.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.4.0"
zerocopy = { version = "0.6.1", features = ["alloc"] }
