[package]
name = "rfsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.73"
bincode = "1.3.3"
clap = { version = "4.3.21", features = ["derive"] }
env_logger = "0.10.0"
fuser = "0.12.0"
futures-util = "0.3.28"
home = "0.5.5"
inotify = "0.10.2"
libc = "0.2.147"
log = "0.4.20"
lru = "0.11.0"
md5 = "0.7.0"
rustix = "0.38.8"
serde = { version = "1.0.183", features = ["derive"] }
serde_bytes = "0.11.12"
tokio = { version = "1.31.0", features = ["sync", "rt", "full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
